--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
-astroid==1.6.4
-isort==4.3.4
-lazy-object-proxy==1.3.1
-mccabe==0.6.1
+alembic==0.9.9
+aniso8601==3.0.0
+click==6.7
+converge==0.9.7
+Flask==1.0.2
+Flask-Migrate==2.1.1
+Flask-RESTful==0.3.6
+Flask-SQLAlchemy==2.3.2
+itsdangerous==0.24
+Jinja2==2.10
+Mako==1.0.7
+MarkupSafe==1.0
 pkg-resources==0.0.0
-pylint==1.9.1
+python-dateutil==2.7.3
+python-editor==1.0.3
+pytz==2018.4
 six==1.11.0
-wrapt==1.10.11
+SQLAlchemy==1.2.7
+Werkzeug==0.14.1
